Blackpurl/src/objects/Activity_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Entity_Id__c</fullName>
        <label>Alternate Entity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Entity__c</fullName>
        <label>Alternate Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Code__c</fullName>
        <label>Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Text__c</fullName>
        <label>Feed Text</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Entity_Id__c</fullName>
        <label>Source Entity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Entity__c</fullName>
        <label>Source Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <formula>IF(FLOOR( NOW() - CreatedDate) &gt;= 30 , IF(FLOOR( NOW() - CreatedDate) = 30 || FLOOR( NOW() - CreatedDate) = 31 || FLOOR(FLOOR( NOW() - CreatedDate) / 30 ) == 1 , &quot;1 month ago&quot; , TEXT(FLOOR(FLOOR( NOW() - CreatedDate) / 30 )) &amp;&quot; months ago&quot;), 
IF(FLOOR( (NOW() - CreatedDate)/7 ) &gt;= 1 , IF(FLOOR(( NOW() - CreatedDate)/7 ) = 1 , &quot;1 week ago&quot;, TEXT(FLOOR(( NOW() - CreatedDate)/7 ) ) &amp;&quot; weeks ago&quot;), 
IF(FLOOR( NOW() - CreatedDate) &gt;= 1 , IF(FLOOR( NOW() - CreatedDate) = 1, &quot;1 day ago&quot;, TEXT(FLOOR( NOW() - CreatedDate) ) &amp; &quot; days ago&quot; ), 
IF(FLOOR(MOD((NOW() - CreatedDate)*24,24)) &gt;= 1 , If(FLOOR(MOD((NOW() - CreatedDate)*24,24)) = 1 ,&quot;1 hour ago&quot;,TEXT(FLOOR(MOD((NOW() - CreatedDate)*24,24))) &amp;&quot; hours ago&quot;), 
If(FLOOR(MOD((NOW() - LastModifiedDate)*1440,60)) = 0 ,&quot; Just Now&quot;, IF(FLOOR(MOD((NOW() - LastModifiedDate)*1440,60)) = 1, &quot;1 minute ago&quot;, TEXT(FLOOR(MOD((NOW() - LastModifiedDate)*1440,60))) &amp;&quot; minutes ago&quot; ) ) 

) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activity_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Time_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AH-{00000000}</displayFormat>
        <label>Activity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>